@@ -1,3 +1,8 @@
+2009-03-31  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.c (accessx_applet_add_stock_icons): Make the icon loading
+	code actually work. Fixes bug 576707.
+
 ==================== 2.26.0 ======================
 
 2009-03-16  Petr Kovar  <pknbe@volny.cz>
